--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ipfs": "^0.32.3",
     "ipfsd-ctl": "^0.39.3",
     "orbit-db": "^0.19.9"
+  },
+  "bin": {
+    "3box-pinning-server": "./server.js"
   }
 }
