--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/uport-project/3box-pinning-server#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
+    "express": "^4.16.4",
     "ipfs": "^0.32.3",
     "ipfsd-ctl": "^0.39.3",
-    "orbit-db": "^0.19.9"
+    "orbit-db": "^0.19.9",
+    "webrtcsupport": "^2.2.0"
   },
   "bin": {
     "3box-pinning-server": "./server.js"
