build: use diff ipfs/orbitdb path for dev/prod

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 ADDRESS_SERVER_URL=https://beta.3box.io/address-server
-ORBITDB_PATH=/opt/orbitdb
-#IPFS_PATH=/opt/ipfs
+ORBITDB_PATH=./dev-data/orbitdb
+IPFS_PATH=./dev-data/ipfs
 REDIS_PATH=127.0.0.1
