--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/node.js",
   "scripts": {
     "lint": "./node_modules/.bin/standard --verbose src/**",
-    "test": "rm -rf ./tmp ; jest --forceExit --detectOpenHandles --coverage --runInBand",
+    "test": "rm -rf ./tmp ; rm -rf ./test ; mkdir -p ./test/one ; jest --forceExit --detectOpenHandles --coverage --runInBand",
     "start": "node ./src/node.js"
   },
   "repository": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/uport-project/3box-pinning-server#readme",
   "dependencies": {
+    "analytics-node": "^3.3.0",
     "axios": "^0.18.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
