--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "analytics-node": "^3.3.0",
     "axios": "^0.18.0",
     "dotenv": "^6.1.0",
+    "exectimer": "^2.2.1",
     "express": "^4.16.4",
     "get-folder-size": "^2.0.0",
     "ipfs": "^0.33.1",
