--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.16.4",
     "ipfs": "^0.33.1",
     "orbit-db": "^0.19.9",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "yargs": "^12.0.5"
   },
   "jest": {
     "testEnvironment": "node"
