--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,16 @@ jobs:
           paths:
             - ./node_modules
 
+        - deploy:
+            name: deployment
+            command: |
+            if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+              ssh -o "StrictHostKeyChecking no" ec2-user@pinning-server-develop "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
+            fi
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              ssh -o "StrictHostKeyChecking no" ec2-user@pinning-server-master "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
+            fi
+
 workflows:
   version: 2
   build-and-deploy:
