--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,12 +38,12 @@ jobs:
       - deploy:
           name: deployment
           command: |
-            if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+            #if [ "${CIRCLE_BRANCH}" == "develop" ]; then
               ssh -o "StrictHostKeyChecking no" $SSH_USER_DEVELOP@$SSH_HOST_DEVELOP "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
-            fi
-            #if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              ssh -o "StrictHostKeyChecking no"  $SSH_USER_MASTER@$SSH_HOST_MASTER "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
             #fi
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              ssh -o "StrictHostKeyChecking no"  $SSH_USER_MASTER@$SSH_HOST_MASTER "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
+            fi
 
 workflows:
   version: 2
