--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: deployment
           command: |
             #if [ "${CIRCLE_BRANCH}" == "develop" ]; then
-              ssh -o "StrictHostKeyChecking no" $SSH_USER_DEVELOP@$SSH_HOST_DEVELOP CIRCLE_BRANCH=$CIRCLE_BRANCH "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
+              ssh -o "StrictHostKeyChecking no" $SSH_USER_DEVELOP@$SSH_HOST_DEVELOP CIRCLE_BRANCH=develop "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
             #fi
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               ssh -o "StrictHostKeyChecking no" $SSH_USER_MASTER@$SSH_HOST_MASTER  CIRCLE_BRANCH=$CIRCLE_BRANCH "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
