--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,10 @@ jobs:
           name: deployment
           command: |
             #if [ "${CIRCLE_BRANCH}" == "develop" ]; then
-              ssh -o "StrictHostKeyChecking no" $SSH_USER_DEVELOP@$SSH_HOST_DEVELOP CIRCLE_BRANCH=feat/automate-deployment "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
+              ssh -o "StrictHostKeyChecking no" $SSH_USER_DEVELOP@$SSH_HOST_DEVELOP env CIRCLE_BRANCH=feat/automate-deployment "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
             #fi
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              ssh -o "StrictHostKeyChecking no" $SSH_USER_MASTER@$SSH_HOST_MASTER  CIRCLE_BRANCH=$CIRCLE_BRANCH "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
+              ssh -o "StrictHostKeyChecking no" $SSH_USER_MASTER@$SSH_HOST_MASTER env CIRCLE_BRANCH=$CIRCLE_BRANCH "cd ~/3box-pinning-server; chmod +x deploy.sh; ./deploy.sh"
             fi
 
 workflows:
