--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
+.env.development
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
