--- a/package.json
+++ b/package.json
@@ -25,16 +25,12 @@
   "dependencies": {
     "analytics-node": "^3.3.0",
     "aws-sdk": "^2.414.0",
-    "axios": "^0.18.0",
     "datastore-s3": "^0.2.3",
     "dotenv": "^6.2.0",
     "exectimer": "^2.2.1",
-    "express": "^4.16.4",
     "get-folder-size": "^2.0.0",
     "ipfs": "^0.33.1",
-    "orbit-db": "^0.19.9",
-    "redis": "^2.8.0",
-    "yargs": "^12.0.5"
+    "orbit-db": "^0.19.9"
   },
   "jest": {
     "testEnvironment": "node"
