--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "analytics-node": "^3.3.0",
     "axios": "^0.18.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "exectimer": "^2.2.1",
     "express": "^4.16.4",
