feat: use a orbitdbcache that used shared redis instance

--- a/.env.development.example
+++ b/.env.development.example
@@ -3,3 +3,4 @@ IPFS_PATH=./dev-data/ipfs
 AWS_BUCKET_NAME=experiment-3box-ipfs
 AWS_ACCESS_KEY_ID=AKIA0000000000000000
 AWS_SECRET_ACCESS_KEY=fG00000000000000000000000000000000000000
+ORBIT_REDIS_PATH=redispath
