--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^0.3.0-alpha.3",
     "orbit-db": "git://github.com/orbitdb/orbit-db.git#9d674766a54c7b949eca0d7e5ddc26b5486717cd",
+    "orbit-db-cache-redis": "0.0.1",
     "redis": "^2.8.0",
     "yargs": "^12.0.5"
   },
