--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "express": "^4.16.4",
     "get-folder-size": "^2.0.0",
     "ipfs": "^0.33.1",
-    "orbit-db": "^0.19.9",
+    "orbit-db": "git://github.com/orbitdb/orbit-db.git#9d674766a54c7b949eca0d7e5ddc26b5486717cd",
     "redis": "^2.8.0",
     "yargs": "^12.0.5"
   },
