--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "get-folder-size": "^2.0.0",
     "ipfs": "^0.33.1",
     "orbit-db": "git://github.com/orbitdb/orbit-db.git#9d674766a54c7b949eca0d7e5ddc26b5486717cd",
+    "js-sha256": "^0.9.0",
+    "multihashes": "^0.4.14",
     "redis": "^2.8.0",
     "yargs": "^12.0.5"
   },
