--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs:
       - aws-cli/configure
       - run:
           name: Deploy Pinning Service
-          command: aws ecs update-service --force-new-deployment --cluster  pinning-node-cluster  --service pinning-node-service
+          command: aws ecs update-service --force-new-deployment --cluster  pinning-node-cluster-prod  --service pinning-node-service-prod
       - run:
           name: Deploy API Service
-          command: aws ecs update-service --force-new-deployment --cluster  pinning-node-cluster  --service profile-api-service
+          command: aws ecs update-service --force-new-deployment --cluster  pinning-node-cluster-prod  --service profile-api-service-prod
 
   # Need seperate clusters if we have dev and prod, depends how we want to treat dev
   deploy-prod:
@@ -64,10 +64,10 @@ jobs:
       - aws-cli/configure
       - run:
           name: Deploy Pinning Service
-          command: aws ecs update-service --force-new-deployment --cluster tf-ecs-cluster --service tf-ecs-service
+          command: aws ecs update-service --force-new-deployment --cluster pinning-node-cluster-prod  --service pinning-node-service-prod
       - run:
           name: Deploy API Service
-          command: aws ecs update-service --force-new-deployment --cluster profile-api-cluster --service profile-api-service
+          command: aws ecs update-service --force-new-deployment --cluster profile-api-cluster-prod --service profile-api-service-prod
 
 workflows:
   build-deploy:
