--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/uport-project/3box-pinning-node#readme",
   "dependencies": {
+    "3box-orbitdb-plugins": "^1.0.0",
+    "3id-resolver": "0.0.4",
     "analytics-node": "^3.3.0",
     "aws-sdk": "^2.414.0",
     "axios": "^0.18.0",
-    "did-resolver": "0.0.6",
     "datastore-s3": "^0.2.4",
+    "did-resolver": "0.0.6",
     "dotenv": "^6.2.0",
     "exectimer": "^2.2.1",
     "express": "^4.16.4",
@@ -35,7 +37,7 @@
     "js-sha256": "^0.9.0",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^0.3.0-alpha.3",
-    "orbit-db": "git://github.com/orbitdb/orbit-db.git#9d674766a54c7b949eca0d7e5ddc26b5486717cd",
+    "orbit-db": "^0.21.0",
     "orbit-db-cache-redis": "0.0.3",
     "redis": "^2.8.0",
     "yargs": "^13.2.2"
