--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/uport-project/3box-pinning-node#readme",
   "dependencies": {
-    "3box-orbitdb-plugins": "^1.0.0",
+    "3box-orbitdb-plugins": "^1.0.2-beta.1",
     "3id-resolver": "0.0.4",
     "analytics-node": "^3.3.0",
     "aws-sdk": "^2.414.0",
@@ -33,10 +33,10 @@
     "dotenv": "^6.2.0",
     "exectimer": "^2.2.1",
     "express": "^4.16.4",
-    "ipfs": "^0.33.1",
+    "ipfs": "^0.35.0",
     "js-sha256": "^0.9.0",
     "multihashes": "^0.4.14",
-    "muport-did-resolver": "^0.3.0-alpha.3",
+    "muport-did-resolver": "^0.3.0-alpha.6",
     "orbit-db": "^0.21.0",
     "orbit-db-cache-redis": "0.0.3",
     "redis": "^2.8.0",
