--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "orbit-db": "^0.21.3",
     "orbit-db-cache-redis": "0.0.3",
     "redis": "^2.8.0",
+    "url-parse": "^1.4.7",
     "yargs": "^13.2.2"
   },
   "jest": {
