--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "exectimer": "^2.2.1",
     "express": "^4.16.4",
     "ipfs": "^0.36.4",
+    "ipfs-log": "^4.3.6",
     "js-sha256": "^0.9.0",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^0.3.1",
