--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "devDependencies": {
     "jest": "^23.6.0",
-    "standard": "^14.1.0"
+    "standard": "^14.1.0",
+    "supertest": "^4.0.2"
   },
   "standard": {
     "env": [
