--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "orbit-db-cache-redis": "0.0.3",
     "os-utils": "0.0.14",
     "redis": "^2.8.0",
-    "url-parse": "^1.4.7",
-    "yargs": "^14.2.0"
+    "url-parse": "^1.4.7"
   },
   "jest": {
     "testEnvironment": "node"
