--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "orbit-db": "^0.21.4",
     "orbit-db-cache-redis": "0.0.3",
     "os-utils": "0.0.14",
-    "redis": "^2.8.0",
-    "url-parse": "^1.4.7"
+    "redis": "^2.8.0"
   },
   "jest": {
     "testEnvironment": "node"
