--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "js-sha256": "^0.9.0",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^0.3.1",
-    "orbit-db": "^0.22.1",
+    "orbit-db": "3box/orbit-db#3box",
     "orbit-db-cache-redis": "^0.1.2",
     "os-utils": "0.0.14",
     "redis": "^2.8.0"
