proper setup and teardown for each test to make them independent of each other

--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
   },
   "devDependencies": {
     "jest": "^23.6.0",
+    "lodash.defaultsdeep": "^4.6.1",
     "nodemon": "^1.19.4",
     "redis-mock": "^0.47.0",
     "standard": "^14.1.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "tmp-promise": "^2.0.2"
   },
   "standard": {
     "env": [
