--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/3box/3box-pinning-node#readme",
   "dependencies": {
-    "3box-orbitdb-plugins": "3box/3box-orbitdb-plugins#feat/orbit-23",
+    "3box-orbitdb-plugins": "^1.0.7",
     "3id-resolver": "0.0.4",
     "analytics-node": "^3.3.0",
     "aws-sdk": "^2.414.0",
