--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "ipfs-log": "^4.5.4",
     "ipfs-repo": "^0.30.1",
     "js-sha256": "^0.9.0",
+    "lodash": "^4.17.15",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^0.3.1",
     "orbit-db": "^0.23.1",
     "orbit-db-cache-redis": "^0.1.2",
     "os-utils": "0.0.14",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "uuid": "^3.4.0"
   },
   "jest": {
     "testEnvironment": "node"
