--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "analytics-node": "^3.3.0",
     "aws-sdk": "^2.414.0",
     "axios": "^0.19.0",
+    "bunyan": "^1.8.12",
     "datastore-s3": "^0.3.0",
     "did-resolver": "0.0.6",
     "dotenv": "^6.2.0",
