--- a/package.json
+++ b/package.json
@@ -30,31 +30,32 @@
     "aws-sdk": "^2.414.0",
     "axios": "^0.19.0",
     "bunyan": "^1.8.12",
-    "datastore-s3": "^0.3.0",
+    "datastore-s3": "^1.0.0",
     "did-resolver": "^1.1.0",
     "dotenv": "^6.2.0",
     "exectimer": "^2.2.1",
     "express": "^4.16.4",
-    "ipfs": "^0.40.0",
+    "ipfs": "^0.43.3",
     "ipfs-http-client": "^42.0.0",
-    "ipfs-log": "^4.5.4",
-    "ipfs-repo": "^0.30.1",
+    "ipfs-log": "^4.6.0",
+    "ipfs-repo": "^1.0.0",
     "js-sha256": "^0.9.0",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^1.0.1",
-    "orbit-db": "^0.23.1",
+    "orbit-db": "orbitdb/orbit-db#38d0e013191947af071ce0c99b20459ab9755396",
     "orbit-db-cache-redis": "^0.1.2",
     "os-utils": "0.0.14",
     "redis": "^2.8.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "jest-environment-uint8array"
   },
   "bin": {
     "3box-pinning-node": "./src/node.js"
   },
   "devDependencies": {
     "jest": "^23.6.0",
+    "jest-environment-uint8array": "^1.0.0",
     "lodash.defaultsdeep": "^4.6.1",
     "nodemon": "^1.19.4",
     "redis-mock": "^0.47.0",
