--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "rm -rf ./tmp ;  mkdir -p ./tmp/test/one ; jest --forceExit --detectOpenHandles --coverage --runInBand",
     "start": "node ./src/node.js",
     "start:prod": "node --max-old-space-size=20480 ./src/node.js",
+    "start:prod:profile": "node --inspect=0.0.0.0:9229 --max-old-space-size=20480 ./src/node.js",
     "start:dev": "./node_modules/.bin/nodemon ./src/node.js"
   },
   "repository": {
