--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "js-sha256": "^0.9.0",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^1.0.2",
+    "node-memwatch": "^1.0.1",
     "orbit-db": "^0.24.1",
     "orbit-db-cache-redis": "^0.1.2",
     "os-utils": "0.0.14",
