fix: memstore datastore

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "aws-sdk": "^2.702.0",
     "axios": "^0.19.0",
     "bunyan": "^1.8.12",
+    "datastore-level": "^1.1.0",
     "datastore-s3": "^1.0.0",
     "did-resolver": "^1.1.0",
     "dotenv": "^6.2.0",
@@ -42,6 +43,7 @@
     "ipfs-log": "^4.6.0",
     "ipfs-repo": "^3.0.2",
     "js-sha256": "^0.9.0",
+    "level-mem": "^5.0.1",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^1.0.2",
     "orbit-db": "^0.24.2",
