--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "level-mem": "^5.0.1",
     "multihashes": "^0.4.14",
     "muport-did-resolver": "^1.0.3",
+    "node-memwatch": "^1.0.1",
     "orbit-db": "^0.24.2",
     "orbit-db-cache-redis": "^0.1.2",
     "os-utils": "0.0.14",
